Added grid size funtionality

--- a/index.html
+++ b/index.html
@@ -8,8 +8,10 @@
     <script src="setup.js" defer></script>
 </head>
 <body>
-    <div id="sketch-area" class="container">
-
+    <div id="sketch-area" class="container"> </div>
+    <div id="slider-container">
+        <input type="range" min="8" max="100" value="16" class="slider" id="slider">
+        <p id="slider-value"></p>
     </div>
 </body>
 </html>
