--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
     <script src="setup.js" defer></script>
 </head>
 <body>
+    <h1>Etch-A-Sketch</h1>
     <div id="sketch-area" class="container"> </div>
     <div id="slider-container">
         <input type="range" min="8" max="100" value="16" class="slider" id="slider">
